--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="css/lib/codemirror.css">
     <style>
         html, body {
+            position: relative;
+            width: 100%;
+            height: 100%;
             margin: 0px;
             padding: 0px;
             outline: 0px;
             overflow: hidden;
         }
+
+        .container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+        }
+
+        .CodeMirror {
+            position: absolute;
+            top: 6%;
+            left: 6%;
+            height: 88%;
+            width: 88%;
+        }
     </style>
     <body>
-        <div id="container"></div>
+        <div id="container">
+            <textarea class="code"></textarea>
+        </div>
         <script src="js/lib/jquery-1.11.3.min.js"></script>
         <script src="js/lib/three.min.js"></script>
         <script src="js/lib/CopyShader.js"></script>
         <script src="js/lib/RenderPass.js"></script>
         <script src="js/lib/ShaderPass.js"></script>
         <script src="js/lib/EffectComposer.js"></script>
+        <script src="js/lib/codemirror.js"></script>
+        <script src="js/lib/codemirror-clike.js"></script>
+        <script src="js/lib/codemirror-keymap-sublime.js"></script>
         <script src="js/helpers.js"></script>
         <script src="js/main.js"></script>
     </body>
