--- a/index.html
+++ b/index.html
@@ -18,17 +18,77 @@
             height: 100%;
         }
 
-        .CodeMirror {
+        #codemirror-container {
             position: absolute;
             top: 6%;
             left: 6%;
-            height: 88%;
             width: 88%;
+            height: 88%;
+            min-width: 800px;
+            opacity: 0.5;
+        }
+
+        #codemirror-container:hover, #codemirror-container:focus {
+            opacity: 1;
+        }
+
+        #codemirror-container__left {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 10%;
+            height: 100%;
+            z-index: 2;
+        }
+
+        #codemirror-container__right {
+            position: absolute;
+            top: 0px;
+            left: 10%;
+            width: 90%;
+            height: 100%;
+            z-index: 1;
+        }
+
+        .CodeMirror {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            visibility: hidden;
+        }
+
+        .cm-s-monokai .CodeMirror-lines { padding: 10px 0; }
+        .cm-s-monokai .CodeMirror-line  { padding: 0 10px; }
+
+        .CodeMirror.active {
+            visibility: visible;
+        }
+
+        .shader-tab-button {
+            opacity: 0.8;
+        }
+
+        .shader-tab-button.active {
+            opacity: 1;
+        }
+
+        button {
+            width: 100%;
         }
     </style>
     <body>
         <div id="container">
-            <textarea class="code"></textarea>
+            <div id="codemirror-container">
+                <div id="codemirror-container__left">
+                    <button id="add-shader-button">Add New Shader</button>
+                    <div id="shader-tab-buttons"></div>
+                </div>
+                <div id="codemirror-container__right">
+                    <div id="shader-tab-panes"></div>
+                </div>
+            </div>
         </div>
         <script src="js/lib/jquery-1.11.3.min.js"></script>
         <script src="js/lib/three.min.js"></script>
@@ -43,3 +103,29 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
+<script id="vs" type="x-shader/x-vertex">
+void main() {
+    gl_Position = vec4(position, 1.0);
+}
+</script>
+
+<script id="fs" type="x-shader/x-fragment">
+#ifdef GL_ES
+precision mediump float;
+#endif
+
+uniform vec2 uResolution;
+uniform float uTime;
+uniform sampler2D uTexture;
+uniform sampler2D uWebcam;
+
+void main() {
+    vec4 outColor = vec4( vec3( 0.0 ), 1.0 );
+    vec2 pos = gl_FragCoord.xy;
+    vec2 center = uResolution.xy / 2.0;
+    vec2 uv = gl_FragCoord.xy / uResolution.xy;
+    
+    gl_FragColor = vec4(uv.x, uv.y, cos(uTime), 1.0);
+}
+</script>
