--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@ void main() {
     vec2 center = uResolution.xy / 2.0;
     vec2 uv = gl_FragCoord.xy / uResolution.xy;
     
-    gl_FragColor = vec4(uv.x+uMouse.x, uv.y+uMouse.y, abs(cos(uTime)), 1.0);
+    gl_FragColor = vec4(vec3(uv.x), 1.0);
 }
 </script>
