--- a/index.html
+++ b/index.html
@@ -77,15 +77,27 @@
         }
 
         .shader-tab-button {
-            opacity: 0.8;
+            opacity: 0.9;
+            outline: 0px;
+            border: 0px;
+            background-color: rgba(39, 40, 34, 0.9);
+            padding: 10px;
+            margin-bottom: 10px;
+            border-radius: 5px 0px 0px 5px;
+            color: #f8f8f2;
         }
 
         .shader-tab-button.active {
             opacity: 1;
         }
 
+        .shader-tab-button:hover {
+            opacity: 1;
+        }
+
         button {
             width: 100%;
+            cursor: pointer;
         }
     </style>
     <body>
