--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@ uniform sampler2D webcam;
 uniform sampler2D texture;
 
 void main() {
-    vec4 outColor = vec4( vec3( 0.0 ), 1.0 );
     vec2 pos = gl_FragCoord.xy;
-    vec2 center = resolution.xy / 2.0;
     vec2 uv = gl_FragCoord.xy / resolution.xy;
+    vec4 webcamRGBA = texture2D(webcam, uv);
+    vec4 textureRGBA = texture2D(texture, uv);
     
-    gl_FragColor = vec4(vec3(uv.x), 1.0);
+    gl_FragColor = vec4(webcamRGBA.rgb, 1.0);
 }
 </script>
