--- a/index.html
+++ b/index.html
@@ -165,14 +165,16 @@ uniform vec2 resolution;
 uniform vec2 mouse;
 uniform sampler2D webcam;
 uniform sampler2D texture;
+uniform sampler2D backbuffer;
 
 void main() {
     vec2 pos = gl_FragCoord.xy;
     vec2 uv = gl_FragCoord.xy / resolution.xy;
     vec4 webcamRGBA = texture2D(webcam, uv);
     vec4 textureRGBA = texture2D(texture, uv);
+    vec4 backbufferRGBA = texture2D(backbuffer, uv);
   
-    if(webcamRGBA.r < mouse.x){ webcamRGBA = textureRGBA; }
+    if(webcamRGBA.r < 0.5){ webcamRGBA = backbufferRGBA; }
     
     gl_FragColor = vec4(webcamRGBA.rgb, 1.0);
 }
